# onramp

./: .dockerignore  .env.ai.example  .env.example  .env.production.example  .firebaserc  .gitignore  Dockerfile  Dockerfile.production  LICENSE  ROADMAP.md  Readme.md  deploy.ps1  deploy.sh  docker-compose.microservices.yml  docker-compose.prod.yml  docker-compose.yml  filelist.txt  firebase.json  firestore.indexes.json  firestore.rules  generate-video.bat  generate-video.sh  load-test.js  nginx.conf  nginx.prod.conf  package-lock.json  package.json  render.yaml  setup-local.bat  setup-local.sh  vercel.json
.github/workflows/: backend.yml  cd.yml  ci-cd.yml  ci.yml  frontend.yml  parser-ci.yml  rotate-secrets.yml
archive/microservices/team-analytics/: pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  alembic.ini  debug.py  drop_tables.py  env.example  railway.json  requirements.lock.txt  requirements.txt  seed_dev_user.py  test_graph_optimization.py
backend/alembic/: env.py
backend/app/: __init__.py  circuit_breaker.py  graph.py  llm.py  main.py  waitlist_mock.json
backend/evals/: run_evals.py  scorer.py
backend/tests/: .parser_benchmark_baseline.json  benchmark_parser.py  conftest.py  integration_multi_lang.py  test_access_control_service.py  test_access_guard.py  test_agents.py  test_architecture_explorer.py  test_audit_service.py  test_auth_middleware.py  test_billing_e2e.py  test_billing_webhook.py  test_celery_tasks.py  test_circuit_breaker.py  test_cto_dashboard.py  test_dead_letter_service.py  test_eval_scorer.py  test_feedback_service.py  test_field_encryption.py  test_first_pr_accelerator.py  test_gamification.py  test_invite_service.py  test_learning_path.py  test_learning_path_generator.py  test_llm.py  test_llm_router.py  test_migration_003_ordering.py  test_notification_service.py  test_parser_service.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_prod_env_validation.py  test_quota.py  test_rate_limit_middleware.py  test_rbac_access_guard.py  test_registry_tables.py  test_repo_qa.py  test_repositories_security.py  (+7 more)
codeflow-promo/: package-lock.json  package.json
codeflow-promo/src/: Root.jsx  VideoScenes.jsx
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  CTO_EVALUATION.md  DEPLOYMENT.md  FEATURES_PLAN.md  GITHUB_INTEGRATION.md  QUICK_START.md  features2.md  features_future.md  system_architecture_design.md  versions.md
kubernetes/: advanced-scaling.yaml  config.yaml  deployment.yaml  frontend.yaml  hpa.yaml  ingress.yaml  redis.yaml  service.yaml
scripts/: check_columns.py  cohort_sample.csv  daily_briefing.cmd  daily_update.py  debug.py  deploy-prod.ps1  deploy-prod.sh  fix_timestamps.py  migrate_dynamic_to_tables.py  monitor-costs.ps1  monitor-costs.sh  onboard_cohort.py  onboard_dev_shah.py  rotate-secrets.ps1  seed_dev_user.py  senior_inbox.py  setup-ssl.sh  setup_roles.py  test_ai_providers.py
services/ai-tutor/: pyproject.toml
services/ai-tutor/app/: main.py
services/notification/: Dockerfile  pyproject.toml
services/notification/app/: main.py
services/repo-analysis/: Dockerfile  pyproject.toml
services/repo-analysis/app/: main.py
services/tui/: Dockerfile  app.py  pyproject.toml
services/user-service/: pyproject.toml
services/user-service/app/: main.py
services/waitlist-service/: migrate_mock_to_sheets.py  pyproject.toml  render.yaml  run.ps1  run.py
services/waitlist-service/app/: main.py  waitlist_mock.json
services/waitlist-service/tests/: conftest.py  test_main.py
video-generator/: .env.example  README.md  combine-clips.js  generate-all.js  generate-video.js  generate-voiceover.js  generate.bat  generate.sh  package-lock.json  package.json  preview-video.js
web/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: auth.spec.ts  (+3 more)
(+282 files in other folders)
