[tool.poetry]
name = "ai-tutor-service"
version = "2.0.0"
description = "AI Tutor Service - Multi-provider AI integration"
authors = ["AHS Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
google-generativeai = "^0.8.0"
anthropic = "^0.38.0"
openai = "^1.57.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"