[tool.poetry]
name = "repo-analysis-service"
version = "2.0.0"
description = "Repository Analysis Service - GitHub ingestion, AST parsing, code intelligence"
authors = ["AHS Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
redis = "^5.2.0"
httpx = "^0.27.0"
python-github = "^2.0.0"
tree-sitter = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"