[tool.poetry]
name = "waitlist-service"
version = "1.0.0"
description = "Waitlist Service - pre-launch signup capture for CodeFlow"
authors = ["AHS Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.0"}
gspread = "^6.1.0"
google-auth = "^2.34.0"
sendgrid = "^6.11.0"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
